configurationyamls/networking/three/ns_one_deployment.yaml
# In ingress we specify source and in egress we specify target
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: ns-one
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
        app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx-container
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ns-one
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
